Correct spacing for lines

--- a/css/main.css
+++ b/css/main.css
@@ -3,33 +3,38 @@ html {
   font-family: Georgia, serif;
   line-height: 1.5;
 }
+
 img {
   width: 100%;
 }
- h1, h2{
+
+h1, h2{
   color: #5d8432;
+  font-family: "Patua One", sans-serif;
 }
- figcaption {
+
+figcaption {
   font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
- nav {
+
+nav {
   font-size: 1.125rem;
   font-weight: bold;}
+
 nav ol {
   list-style-type: none;
-
 }
- nav a {
+
+nav a {
   color: #793284;
   text-decoration: none;
-
 }
+
 nav a:hover {
   color: #b42885;
   text-decoration: underline;
-
 }
 
 .intro {
